# ushareoid

./: CHANGELOG  CMakeLists.txt  INSTALL  README  TODO  install_global.sh  install_local.sh
applet/: CMakeLists.txt  configdialog.cpp  configdialog.h  configdialog.ui  plasma-applet-ushareoid.desktop  ushareoid.cpp  ushareoid.h
applet/icons/: CMakeLists.txt  hisc-app-ushareoid.svgz
